enhancement folder related issues
- Closing from app to home where weird artifacts shown
- Duplicated icon after adding new icon in the folder
- Stuck icon when moving from app to home

closes the following
- #5084
- #5081
- #5074